--- a/views/about.html
+++ b/views/about.html
@@ -4,8 +4,32 @@
 	<meta charset="UTF-8">
 	<title>Upcomer</title>
 	<link rel="stylesheet" href="../resources/css/styles.css">
+	<link rel="stylesheet" href="../resources/css/reset.css">
 </head>
 <body>
+	<header>
+		<div id="header_wrapper">
+			<div id="logo">
+				<img src="../assets/images/upcomer-logo.png">
+			</div>
+			<div id="nav">
+				<ul>
+					<li class="link"><a href="home.html">Home</a></li>
+					<li class="link"><a href="about.html">About</a></li>
+				</ul>
+			</div>
+			<div id="social_icons">
+				<ul>
+					<li class="iconfb">
+						<a href="https://facebook.com/upcomer"></a>
+					</li>
+					<li class="icontwitter">
+						<a href="https://twitter.com/upcomer"></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</header>
 	<div id="content-section">
 		<div id="about-content1">
 			<div class="wrap-container">
@@ -24,36 +48,36 @@
 				<div id="circle-2014">
 					<span>2014</span>
 				</div>
-				<div class="sub-desc-wrap left">
+				<div class="sub-desc-left1">
 					<div class="sub-desc">
 						<span class="head">A new idea was forming</span>
-						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+						<span>In May 2014 we got the first idea of what eventually became Upcomer.</span>
 					</div>
-					<div class="tooltip right"></div>
+					<div class="tooltip-right"></div>
 					<div class="border-circle"></div>	 					
 				</div>
-				<div class="sub-desc-wrap right">
+				<div class="sub-desc-right1">
 					<div class="sub-desc">
 						<span class="head">Design and brandidentity</span>
-						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>			 						
+						<span>We formed a great team, created our brand and set out to realize our potential.</span>				
 					</div>
-					<div class="tooltip left"></div>
+					<div class="tooltip-left"></div>
 					<div class="border-circle"></div>
 				</div>
-				<div class="sub-desc-wrap left">
+				<div class="sub-desc-left2">
 					<div class="sub-desc">
 						<span class="head">Android app developed</span>
-						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+						<span>We started developing the Android application.</span>
 					</div>
-					<div class="tooltip right"></div>
+					<div class="tooltip-right"></div>
 					<div class="border-circle"></div>
 				</div>
-				<div class="sub-desc-wrap right">
+				<div class="sub-desc-right2">
 					<div class="sub-desc">
 						<span class="head">Beta signup launched</span>
-						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+						<span>The Upcomer private beta was officially launched for a lucky few.</span>
 					</div>
-					<div class="tooltip left"></div>
+					<div class="tooltip-left"></div>
 					<div class="border-circle"></div>
 				</div>
 			</div>
