home page design

--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -19,8 +19,8 @@
 		</div>
 		<div id="social_icons">
 			<ul>
-				<li class="iconfb"><a href="www.facebook.com"></a></li>
-				<li class="icontwitter"><a href="www.twitter.com"></a></li>
+				<li class="iconfb"><a href="https://facebook.com/upcomer"></a></li>
+				<li class="icontwitter"><a href="https://twitter.com/upcomer"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -34,10 +34,53 @@
 		 				We made it a whole lot easier for you to always stay updated on all upcoming products you care about 
 		 			</span>
 		 			<span>
-		 				..so be the first to try Upcomer
+		 				Be the first to try Upcomer
 		 			</span>
 		 		</label>
 		</div>
+	</div>
+	<div class="signup_container">
+		<span id="coming_soon">Coming soon to Android and iOS first half of 2015</span>
+		<div class="signup">
+			<input type="email" value="" name="EMAIL" placeholder="Enter your Email">
+			<input type="submit" value="Ok">
+		</div>
+	</div>
+	<div id="scroll">
+		<img src="../assets/slices/down-arrow.png">
+	</div>
+</div>
+<div id="first_container">
+	<div id="first_section">
+		<div id="product_details">
+			<section id="heading">
+				<h2>Personalize your feed</h2>
+			</section>
+			<span>
+				Choose your favourite products and catagories to get notified as soon as a new product is get announced
+			</span>
+		</div>
+	</div>
+	<section  id="imgbg">
+		<div>
+			<img src="../assets/slices/feed_bg.png">
+		</div>
+	</section>
+</div>
+<div id="second_container">
+	<div id="second_section">
+		<img src="../assets/slices/illustration1.png">
+		<section class="product">
+			<h3>All in one place</h3>
+			<span>Follow your favourite products to get only the most important updates, such as release dates, reviews, specifications, giveaways and more in your personal feed</span>
+		</section>
+	</div>
+	<div id="notification_div">
+		<section class="product">
+			<h3>Be the first to know</h3>
+			<span>Get push notifications when a major event happens, such as when a new product is announced, beta sign up is possible, or a product is available for purchase</span>
+		</section>
+		<img src="../assets/slices/illustration2.png">
 	</div>
 </div>
 </body>
