--- a/views/about.html
+++ b/views/about.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Upcomer</title>
+	<link rel="icon" href="../assets/images/favicon.jpg">
 	<link rel="stylesheet" href="../resources/css/styles.css">
 	<link rel="stylesheet" href="../resources/css/reset.css">
 </head>
@@ -98,6 +99,26 @@
 					</label>
 				</section>
 			</div>
+		</div>
+	</div>
+	<div id="banner-footer">
+		<div class="footer-wrap-container">
+	 		<div id="footer-banner-wrap">
+				<img src="../assets/images/hand.png">
+				<span>#upcomeriscoming</span>
+	 		</div>
+		</div>	
+	</div>		
+	<div id="footer">
+		<div class="footer-wrap-container">
+			<ul>
+				<li class="iconfb link">
+					<a target="_blank" href="https://facebook.com/upcomer"></a>
+				</li>
+				<li class="icontwitter link">
+					<a target="_blank" href="https://twitter.com/upcomer"></a>
+				</li>
+			</ul>
 		</div>
 	</div>
 
