--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -273,6 +273,62 @@ body {
   	color: #ffffff;
 }
 
+/*FOOTER*/
+#footer,
+#banner-footer {
+    float: left;
+    width: 100%;    
+}
+#banner-footer {
+    background-color: #333;
+}
+.footer-wrap-container {
+    margin: 0 auto;
+    width: 100%;
+}
+#footer-banner-wrap {
+    width: 605px;
+    margin: 0 auto;
+    margin-top: 25px;
+}
+#footer-banner-wrap img {
+    float: left;
+    margin-left: -100px;
+}
+#footer-banner-wrap span {
+    color: #fff;
+    font-size: 48px;
+    font-family: "Asap-Bold";
+    float: left;
+    margin-top: 95px;
+    margin-left: -69px;
+}
+#footer ul {
+    margin: 35px auto;
+    position: relative;
+    width: 150px;
+    height: 20px;
+    padding: 0;
+}
+#footer ul .iconfb{
+    width: 40px;
+    height: 40px;
+    float: left;
+    margin-top: -10px;
+    background-image: url("../../assets/images/fb-icon.png");
+    background-repeat: no-repeat;
+    margin-right: 10px;
+    cursor: pointer;
+}
+#footer ul .icontwitter{
+    width: 40px;
+    height: 40px;
+    float: left;
+    margin-top: -10px;
+    background-image: url("../../assets/images/tweet-icon.png");
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
 /*MEDIA QUERIES*/
 @media only screen and (min-width: 1921px) and (max-width: 2560px) {
 
