--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -13,8 +13,8 @@
 		</div>
 		<div id="nav">
 			<ul>
-				<li class="link"><a href="home.html">Home</a></li>
-				<li class="link"><a>About</a></li>
+				<li class="link"><a>Home</a></li>
+				<li class="link"><a href="about.html">About</a></li>
 			</ul>
 		</div>
 		<div id="social_icons">
@@ -42,8 +42,10 @@
 	<div class="signup_container">
 		<span class="coming_soon">Coming soon to Android and iOS first half of 2015</span>
 		<div class="signup">
-			<input type="email" value="" name="EMAIL" placeholder="Enter your Email">
-			<input type="submit" value="Ok">
+			<form>
+				<input type="email" required  name="EMAIL" placeholder="Enter your Email" required>
+				<input type="submit" value="Ok">
+			</form>
 		</div>
 	</div>
 	<div id="scroll">
@@ -97,10 +99,35 @@
 	<div class="signup_container">
 		<span class="coming_soon">Coming soon to Android and iOS first half of 2015</span>
 		<div class="signup">
-			<input type="email" value="" name="EMAIL" placeholder="Enter your Email">
-			<input type="submit" value="Ok">
+			<form>
+				<input type="email" required  name="EMAIL" placeholder="Enter your Email" required>
+				<input type="submit" value="Ok">
+			</form>
 		</div>
 	</div>
 </div>
+<div id="banner-footer">
+	<div class="footer-wrap-container">
+ 		<div id="footer-banner-wrap">
+			<img src="../assets/images/hand.png">
+			<span>#upcomeriscoming</span>
+ 		</div>
+	</div>	
+</div>		
+<div id="footer">
+	<div class="footer-wrap-container">
+		<ul>
+			<li class="iconfb link">
+				<a href="https://facebook.com/upcomer"></a>
+			</li>
+			<li class="icontwitter link">
+				<a href="https://twitter.com/upcomer"></a>
+			</li>
+		</ul>
+	</div>
+</div>
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script type="text/javascript" src="../resources/js/jquery.scrollTo.min.js"></script>
+<script type="text/javascript" src="../resources/js/script.js"></script>
 </body>
 </html>
