--- a/views/about.html
+++ b/views/about.html
@@ -15,7 +15,7 @@
 			</div>
 			<div id="nav">
 				<ul>
-					<li class="link"><a href="home.html">Home</a></li>
+					<li class="link"><a href="upcomer.html">Home</a></li>
 					<li class="link"><a href="about.html">About</a></li>
 				</ul>
 			</div>
