--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -330,6 +330,208 @@ body {
     cursor: pointer;
 }
 /*MEDIA QUERIES*/
+@media only screen and (max-width: 480px) {
+    #circle-2014 {
+        width: 80px;
+        height: 80px;
+        margin: -62px 0 0;
+    }
+    #circle-2014 span, 
+    #circle-now span {
+        font-size: 20px;
+    }
+    #about-content2 .sub-desc-left1,
+    #about-content2 .sub-desc-left2,
+    #about-content2 .sub-desc-right1,
+    #about-content2 .sub-desc-right2 {
+        margin-left: 43px;
+        width: 65%;
+        padding-left: 38px;
+        position: relative;
+        float: left;
+        border-left: 7px solid #fff;
+        margin-top: 0px;
+    }
+    .sub-desc-left1, .sub-desc-left2 {
+        border-right: none;
+    }
+    .sub-desc span.head {
+        font-size: 18px;
+    }
+    .sub-desc span {
+        font-size: 14px;
+    }
+    #about-content2 .sub-desc {
+        margin: 25px 9px 25px 0;
+        padding: 15px 7px 15px 10px;
+        width: 80%;
+        border-left: 7px solid #fff;
+    }
+    .tooltip-left,
+    .tooltip-right {
+        left: 18px;
+    }
+    .tooltip-right {
+        border-bottom: 15px solid transparent;
+        border-top: 15px solid transparent;
+        border-right: 20px solid #fff;
+        border-left: none;
+    }
+    .border-circle {
+        left: -24px;
+        top: 39%;
+    }
+    #circle-now {
+        width: 70px;
+        height: 70px;
+        margin: -47px 0 0;
+        margin-left: 10px;
+    }
+    #about-content3 .description {
+        width: 85%;
+        margin: 0 auto;
+    }
+    #email-button {
+        width: 93%;
+    }
+    #email-button a {
+        padding: 6% 10%;
+        font-size: 17px;
+    }
+    #about-content3 {
+        padding-bottom: 40px;
+    }
+    .footer-wrap-container {
+        width: 95%;
+    }
+    #footer-banner-wrap {
+        width: 100%;
+    }
+    #footer-banner-wrap img {
+        margin-left: 0px;
+        height: 112px;
+        width: 100px;
+    }
+    #footer-banner-wrap span {
+        margin-left: -35px;
+        font-size: 22px;
+        margin-top: 38px;
+    }
+    
+}
+@media only screen and (max-width: 720px) {
+    .wrap-container {
+        width: 95%;
+    }
+    #about-content1 .description {
+        width: 95%;
+        margin: 0 auto;
+        float: none;
+        text-align: center;
+    }
+    .description h2 {
+        font-size: 28px;
+    }
+    #content-section {
+        font-size: 16px;
+    }
+    .desc-image {
+        width: 100%;
+        margin-top: 10px;
+        text-align: center;
+    }
+    .desc-image img {
+        width: 70%;
+        float: none;
+        margin: 0 auto;
+    }
+    #circle-2014 {
+        width: 80px;
+        height: 80px;
+        margin: -62px 0 0;
+    }
+    #circle-2014 span, 
+    #circle-now span {
+        font-size: 20px;
+    }
+    #about-content2 .sub-desc-left1,
+    #about-content2 .sub-desc-left2,
+    #about-content2 .sub-desc-right1,
+    #about-content2 .sub-desc-right2 {
+        margin-left: 43px;
+        width: 65%;
+        padding-left: 38px;
+        position: relative;
+        float: left;
+        border-left: 7px solid #fff;
+        margin-top: 0px;
+    }
+    .sub-desc-left1, .sub-desc-left2 {
+        border-right: none;
+    }
+    .sub-desc span.head {
+        font-size: 18px;
+    }
+    .sub-desc span {
+        font-size: 14px;
+    }
+    #about-content2 .sub-desc {
+        margin: 25px 9px 25px 0;
+        padding: 15px 7px 15px 10px;
+        width: 80%;
+        border-left: 7px solid #fff;
+    }
+    .tooltip-left,
+    .tooltip-right {
+        left: 18px;
+    }
+    .tooltip-right {
+        border-bottom: 15px solid transparent;
+        border-top: 15px solid transparent;
+        border-right: 20px solid #fff;
+        border-left: none;
+    }
+    .border-circle {
+        left: -24px;
+        top: 39%;
+    }
+    #circle-now {
+        width: 70px;
+        height: 70px;
+        margin: -47px 0 0;
+        margin-left: 10px;
+    }
+    #about-content3 .description {
+        width: 85%;
+        margin: 0 auto;
+    }
+    #email-button {
+        width: 93%;
+    }
+    #email-button a {
+        padding: 6% 10%;
+        font-size: 17px;
+    }
+    #about-content3 {
+        padding-bottom: 40px;
+    }
+    .footer-wrap-container {
+        width: 95%;
+    }
+    #footer-banner-wrap {
+        width: 100%;
+    }
+    #footer-banner-wrap img {
+        margin-left: 0px;
+        height: 112px;
+        width: 100px;
+    }
+    #footer-banner-wrap span {
+        margin-left: -35px;
+        font-size: 22px;
+        margin-top: 38px;
+    }
+}    
 @media only screen and (min-width: 1921px) and (max-width: 2560px) {
 
 }
@@ -346,11 +548,5 @@ body {
 
 }
 @media only screen and (min-width: 721px) and (max-width: 1024px) {
-
-}
-@media only screen and (min-width: 481px) and (max-width: 720px) {
-
-}
-@media only screen and (min-width: 320px) and (max-width: 480px) {
 
 }
