--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -8,16 +8,21 @@
     src: url('../../assets/fonts/Asap-Bold.ttf'); 
 }
 /*HEADER*/
+body{
+    margin:0 auto;
+    width:100%;
+    max-width: 1650px;
+}
 #logo{
-    text-align: center;
-    width: 100%;
-    float: left;
-    margin-top: 40px;
+  text-align: center;
+  width: 100%;
+  float: left;
+  margin-top: 40px;
 }
 #nav{
     float: left;
     margin-top: -51px;
-    font-family: "Asap-Bold";
+    font-family: Asap-Bold;
     font-size: 18pt;
     color: #333333;
 }
@@ -28,12 +33,20 @@
 }
 #header_wrapper{
     margin: 0 auto;
-    width: 87%;
-    max-width: 1165px;
+    width: 100%;
+    max-width: 1377px;
+    border-bottom: 1px solid #F5F5F5;
+    box-shadow: 0px 0px 0px 0px;
+    height: 82px;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    background-color: #fff;
+    padding-bottom: 11px;
 }
 #nav ul{
     padding: 0;
-    margin: 27px 0;
+    margin: 27px 82px;
 }
 .link{
     list-style: none;
@@ -44,11 +57,11 @@
     text-decoration: none;
     color: #999;
     font-size: 18px;
-    font-family: "Asap-Bold";
+    font-family: Asap-Bold;
 }
 #social_icons ul{
     padding: 0;
-    margin: 27px 0;
+    margin: 27px 82px;
 }
 #social_icons li a{
     float: left;
@@ -61,7 +74,7 @@
     height: 40px;
     float: left;
     margin-top: -10px;
-    background-image: url("../../assets/images/fb-icon.png");
+    background-image: url("../../assets/slices/fb-icon.png");
     background-repeat: no-repeat;
     margin-right: 10px;
 }
@@ -70,7 +83,7 @@
     height: 40px;
     float: left;
     margin-top: -10px;
-    background-image: url("../../assets/images/tweet-icon.png");
+    background-image: url("../../assets/slices/tweet-icon.png");
     background-repeat: no-repeat;
 }
 
