--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -117,10 +117,10 @@
 <div id="footer">
 	<div class="footer-wrap-container">
 		<ul>
-			<li class="iconfb link">
+			<li class="iconfb">
 				<a href="https://facebook.com/upcomer"></a>
 			</li>
-			<li class="icontwitter link">
+			<li class="icontwitter">
 				<a href="https://twitter.com/upcomer"></a>
 			</li>
 		</ul>
