--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -19,8 +19,8 @@
 		</div>
 		<div id="social_icons">
 			<ul>
-				<li class="iconfb"><a href="www.facebook.com"></a></li>
-				<li class="icontwitter"><a href="www.twitter.com"></a></li>
+				<li class="iconfb"><a href="https://facebook.com/upcomer"></a></li>
+				<li class="icontwitter"><a href="https://twitter.com/upcomer"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -34,7 +34,7 @@
 		 				We made it a whole lot easier for you to always stay updated on all upcoming products you care about 
 		 			</span>
 		 			<span>
-		 				..so be the first to try Upcomer
+		 				Be the first to try Upcomer
 		 			</span>
 		 		</label>
 		</div>
