--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -13,8 +13,8 @@
 		</div>
 		<div id="nav">
 			<ul>
-				<li class="link"><a>Home</a></li>
-				<li class="link"><a href="about.html">About</a></li>
+				<li class="link1"><a>Home</a></li>
+				<li class="link2"><a href="about.html">About</a></li>
 			</ul>
 		</div>
 		<div id="social_icons">
