--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -41,12 +41,31 @@
 	</div>
 	<div class="signup_container">
 		<span class="coming_soon">Coming soon to Android and iOS first half of 2015</span>
-		<div class="signup">
+		<div id="mc_embed_signup" class="signup">
+			<form action="//github.us11.list-manage.com/subscribe/post?u=0ea6656791933f40fbd70a7fb&amp;id=048b1411f3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    			<div id="mc_embed_signup_scroll">
+					<div class="mc-field-group">
+						<input type="email" required value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your Email" required>
+					</div>
+					<div id="mce-responses" class="clear">
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+					</div>
+    				<div style="position: absolute; left: -5000px;">
+    					<input type="text" name="b_0ea6656791933f40fbd70a7fb_048b1411f3" tabindex="-1" value="">
+    				</div>
+    				<div class="clear">
+    					<input type="submit" value="Ok" name="subscribe" id="mc-embedded-subscribe" class="button">
+    				</div>
+   				</div>
+			</form>
+		</div>
+		<!-- <div class="signup">
 			<form>
 				<input type="email" required  name="EMAIL" placeholder="Enter your Email" required>
 				<input type="submit" value="Ok">
 			</form>
-		</div>
+		</div> -->
 	</div>
 	<div id="scroll">
 		<img src="../assets/slices/down-arrow.png">
