--- a/resources/css/upcomer.css
+++ b/resources/css/upcomer.css
@@ -144,7 +144,6 @@ body{
 	color: #fff;
 	float: left;
 	width: 100%;
-	height: 664px;
 }
 #content{
 	max-width: 684px;
@@ -223,10 +222,11 @@ div input[type="submit"]{
 	color: white;
 }
 #scroll{
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	width: 100%;
 	text-align: center;
+	padding-top: 120px;
 }
 #scroll img{
 	cursor: pointer;
