--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -68,7 +68,7 @@
 		</div> -->
 	</div>
 	<div id="scroll">
-		<img src="../assets/slices/down-arrow.png">
+		<img id="scroll_img" src="../assets/slices/down-arrow.png">
 	</div>
 </div>
 <div id="first_container">
