--- a/views/upcomer.html
+++ b/views/upcomer.html
@@ -8,6 +8,7 @@
 <body>
 <header>
 	<div id="header_wrapper">
+	<div id="header_container">
 		<div id="logo">
 			<img src="../assets/slices/upcomer-logo.png">
 		</div>
@@ -23,6 +24,7 @@
 				<li class="icontwitter"><a href="https://twitter.com/upcomer"></a></li>
 			</ul>
 		</div>
+	</div>
 	</div>
 </header>
 <div id="content_wrapper">
@@ -68,7 +70,7 @@
 		</div> -->
 	</div>
 	<div id="scroll">
-		<img src="../assets/slices/down-arrow.png">
+		<img id="scroll_img" src="../assets/slices/down-arrow.png">
 	</div>
 </div>
 <div id="first_container">
