--- a/views/about.html
+++ b/views/about.html
@@ -9,28 +9,24 @@
 </head>
 <body>
 	<header>
-		<div id="header_wrapper">
-			<div id="logo">
-				<img src="../assets/images/upcomer-logo.png">
-			</div>
-			<div id="nav">
-				<ul>
-					<li class="link"><a href="upcomer.html">Home</a></li>
-					<li class="link"><a href="about.html">About</a></li>
-				</ul>
-			</div>
-			<div id="social_icons">
-				<ul>
-					<li class="iconfb">
-						<a href="https://facebook.com/upcomer"></a>
-					</li>
-					<li class="icontwitter">
-						<a href="https://twitter.com/upcomer"></a>
-					</li>
-				</ul>
-			</div>
+	<div id="header_wrapper">
+		<div id="logo">
+			<img src="../assets/slices/upcomer-logo.png">
 		</div>
-	</header>
+		<div id="nav">
+			<ul>
+				<li class="link1"><a href="upcomer.html">Home</a></li>
+				<li class="link2"><a>About</a></li>
+			</ul>
+		</div>
+		<div id="social_icons">
+			<ul>
+				<li class="iconfb"><a href="https://facebook.com/upcomer"></a></li>
+				<li class="icontwitter"><a href="https://twitter.com/upcomer"></a></li>
+			</ul>
+		</div>
+	</div>
+</header>
 	<div id="content-section">
 		<div id="about-content1">
 			<div class="wrap-container">
