--- a/views/about.html
+++ b/views/about.html
@@ -9,24 +9,26 @@
 </head>
 <body>
 	<header>
-	<div id="header_wrapper">
-		<div id="logo">
-			<img src="../assets/slices/upcomer-logo.png">
+		<div id="header_wrapper">
+			<div id="header_container">
+				<div id="logo">
+					<img src="../assets/slices/upcomer-logo.png">
+				</div>
+				<div id="nav">
+					<ul>
+						<li class="link1"><a href="upcomer.html">Home</a></li>
+						<li class="link2"><a>About</a></li>
+					</ul>
+				</div>
+				<div id="social_icons">
+					<ul>
+						<li class="iconfb"><a href="https://facebook.com/upcomer"></a></li>
+						<li class="icontwitter"><a href="https://twitter.com/upcomer"></a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div id="nav">
-			<ul>
-				<li class="link1"><a href="upcomer.html">Home</a></li>
-				<li class="link2"><a>About</a></li>
-			</ul>
-		</div>
-		<div id="social_icons">
-			<ul>
-				<li class="iconfb"><a href="https://facebook.com/upcomer"></a></li>
-				<li class="icontwitter"><a href="https://twitter.com/upcomer"></a></li>
-			</ul>
-		</div>
-	</div>
-</header>
+	</header>
 	<div id="content-section">
 		<div id="about-content1">
 			<div class="wrap-container">
