--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -349,6 +349,7 @@ body {
     background-repeat: no-repeat;
     cursor: pointer;
 }
+
 /*MEDIA QUERIES*/
 @media only screen and (max-width: 320px){
     #social_icons {
@@ -404,7 +405,7 @@ body {
     #about-content2 .sub-desc {
         margin: 25px 9px 25px 0;
         padding: 15px 7px 15px 10px;
-        width: 80%;
+        width: 58% !important;
         border-left: 7px solid #fff;
     }
     .tooltip-left,
